# Electron-With-Rust-Template

./: 5.16.0  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
native/: Cargo.toml
native/music-manager/src/: lib.rs
native/src/: lib.rs
src/: index.html  index.tsx  main.js  main.ts  preload.js  store.ts
src/components/: CountButton.tsx  TextBox.tsx  UserForm.tsx
src/states/: IState.ts  IUser.ts
